--- a/index.html
+++ b/index.html
@@ -2,100 +2,253 @@
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>جنگاوران پارس - مینی‌اپ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>جنگاوران پارس</title>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #ffcc00; /* طلایی برای عناصر اصلی */
+            --secondary-color: #007bff; /* آبی برای دکمه‌های اصلی */
+            --background-dark: #1a1a1a; /* پس‌زمینه خیلی تیره */
+            --card-background: #2a2a2a; /* پس‌زمینه کارت‌ها */
+            --text-light: #e0e0e0; /* متن روشن */
+            --text-accent: #aaffaa; /* متن برجسته (سبز) */
+            --button-danger: #dc3545; /* قرمز برای دکمه‌های خطر */
+            --border-color: #444; /* رنگ حاشیه */
+        }
+
         body {
-            font-family: 'BlinkMacSystemFont', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            background-color: #2c2c2c; /* رنگ پس‌زمینه تیره */
-            color: #e0e0e0; /* رنگ متن روشن */
+            font-family: 'Vazirmatn', sans-serif;
+            background-color: var(--background-dark);
+            color: var(--text-light);
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; /* شروع از بالا */
             align-items: center;
-            min-height: 100vh; /* حداقل ارتفاع تمام صفحه */
+            min-height: 100vh;
             margin: 0;
-            padding: 20px;
+            padding: 20px 10px; /* کاهش پدینگ افقی برای موبایل */
             box-sizing: border-box;
             text-align: center;
+            overflow-x: hidden; /* جلوگیری از اسکرول افقی */
+            -webkit-tap-highlight-color: transparent; /* حذف هایلایت آبی در تاچ */
         }
+
         .container {
-            background-color: #3a3a3a; /* رنگ کانتینر داخلی */
-            padding: 30px;
+            background-color: var(--card-background);
+            padding: 25px; /* کمی کمتر از قبل */
             border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            max-width: 450px; /* کمی پهن‌تر */
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+            max-width: 500px;
             width: 100%;
-            margin-top: 20px; /* فاصله از بالا */
-        }
-        h1 {
-            color: #ffcc00; /* رنگ طلایی برای عنوان */
             margin-bottom: 20px;
-            font-size: 1.8em;
+            border: 1px solid var(--border-color); /* حاشیه دور کانتینر */
         }
+
+        h1 {
+            color: var(--primary-color);
+            margin-bottom: 20px;
+            font-size: 1.8em; /* کمی کوچکتر */
+        }
+
         h2 {
-            color: #a0d911; /* رنگ سبز روشن */
+            color: var(--primary-color);
             margin-top: 25px;
             margin-bottom: 15px;
             font-size: 1.4em;
+            border-bottom: 2px solid var(--primary-color);
+            padding-bottom: 5px;
+            display: inline-block; /* برای اینکه خط زیر متن رو بگیره */
         }
+
         p {
-            font-size: 1.1em;
-            line-height: 1.6;
+            font-size: 1em; /* کمی کوچکتر */
+            line-height: 1.5;
             margin-bottom: 10px;
         }
-        #user-info {
-            font-size: 1.2em;
-            color: #b0b0b0;
-            margin-bottom: 20px;
-            border-bottom: 1px solid #555;
-            padding-bottom: 10px;
+
+        .player-stats {
+            background-color: #333; /* رنگ متمایزتر برای بخش آمار */
+            padding: 15px;
+            border-radius: 10px;
+            margin-top: 20px;
+            text-align: right;
+            border: 1px solid var(--border-color);
         }
-        #player-stats p {
-            margin: 5px 0;
-            text-align: right; /* راست‌چین کردن آمار */
-            padding-right: 20px;
+
+        .player-stats div {
+            margin-bottom: 8px;
+            display: flex; /* استفاده از فلکس برای تراز کردن متن و مقدار */
+            justify-content: space-between; /* فاصله انداختن بین نام و مقدار */
+            align-items: center;
         }
-        #player-stats strong {
-            display: inline-block;
-            min-width: 80px; /* برای هم‌ترازی */
+
+        .player-stats strong {
+            color: var(--text-accent);
+            font-size: 1.1em;
+            direction: ltr; /* برای اعداد لاتین */
         }
-        #actions-container button {
-            background-color: #007bff; /* رنگ دکمه آبی */
+
+        .player-stats span {
+            font-weight: bold;
+        }
+
+        /* چیدمان دکمه‌های اصلی */
+        .main-actions, .other-actions {
+            margin-top: 30px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); /* کمی افزایش عرض دکمه */
+            gap: 15px;
+        }
+
+        button {
+            background-color: var(--secondary-color);
             color: white;
             border: none;
-            padding: 12px 20px;
+            padding: 12px 10px; /* پدینگ برای دکمه‌ها */
             border-radius: 8px;
-            font-size: 1em;
+            font-size: 0.95em; /* کمی کوچکتر برای جا شدن متن */
             cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin: 10px 5px; /* فاصله بین دکمه‌ها */
-            width: calc(50% - 10px); /* دو دکمه در یک ردیف */
-            box-sizing: border-box;
+            transition: background-color 0.3s ease, transform 0.1s ease;
+            width: 100%;
+            font-weight: bold;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
-        #actions-container button:hover {
+
+        button:hover {
             background-color: #0056b3;
+            transform: translateY(-2px); /* افکت کوچک هاور */
         }
+
+        button:active {
+            transform: translateY(0);
+        }
+
         #close-button {
-            background-color: #dc3545; /* رنگ دکمه قرمز برای بستن */
+            background-color: var(--button-danger);
             margin-top: 30px;
-            width: calc(100% - 20px); /* دکمه بستن کامل ردیف */
+            width: fit-content; /* عرض متناسب با محتوا */
+            padding: 12px 25px;
         }
         #close-button:hover {
             background-color: #c82333;
         }
+
+        /* استایل‌های خاص برای دکمه‌ها بر اساس ردیف اصلی پایتون */
+        .action-button.economic {
+            background-color: #28a745; /* سبز */
+        }
+        .action-button.military {
+            background-color: #ffc107; /* زرد */
+            color: #333;
+        }
+        .action-button.guild {
+            background-color: #6f42c1; /* بنفش */
+        }
+        .action-button.social {
+            background-color: #17a2b8; /* فیروزه‌ای */
+        }
+        .action-button.utilities {
+            background-color: #6c757d; /* خاکستری */
+        }
+        .action-button.admin {
+            background-color: #e83e8c; /* صورتی */
+        }
+        .action-button.cyber {
+            background-color: #00c0c0; /* آبی فیروزه ای */
+        }
+        .action-button.transfer {
+            background-color: #fd7e14; /* نارنجی */
+        }
+        .action-button.telegram {
+            background-color: #0088cc; /* آبی تلگرام */
+        }
+
+        /* مخفی کردن دکمه‌های خاص در صورت نیاز (توسط JS کنترل می‌شود) */
+        .hidden {
+            display: none !important;
+        }
+
+        /* استایل برای MainButton تلگرام */
+        .telegram-main-button {
+            background-color: var(--secondary-color);
+            color: white;
+            padding: 15px;
+            font-size: 1.1em;
+            width: 100%;
+            position: fixed; /* دکمه اصلی همیشه پایین صفحه باشد */
+            bottom: 0;
+            left: 0;
+            right: 0;
+            text-align: center;
+            cursor: pointer;
+            z-index: 1000;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease;
+        }
+        .telegram-main-button:hover {
+            background-color: #0056b3;
+        }
+
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>به مینی‌اپ بازی جنگاوران خوش آمدید!</h1>
-        <p id="user-info">در حال بارگذاری اطلاعات...</p>
-        <div id="player-stats">
-            <p>در حال دریافت وضعیت بازیکن...</p>
+        <h1>⚔️ جنگاوران پارس ⚔️</h1>
+        <p id="user-info">در حال بارگذاری اطلاعات کاربر...</p>
+
+        <h2>وضعیت قلمرو شما:</h2>
+        <div class="player-stats">
+            <div><span>طلا:</span> <strong id="gold-amount">0</strong> 💰</div>
+            <div><span>الماس:</span> <strong id="diamond-amount">0</strong> 💎</div>
+            <div><span>غذا:</span> <strong id="food-amount">0</strong> 🍖</div>
+            <div><span>بلوک:</span> <strong id="block-amount">0</strong> 🧱</div>
+            <div><span>سرباز:</span> <strong id="soldier-amount">0</strong> 💂‍♂️</div>
+            <div><span>دیوار:</span> <strong id="wall-amount">0</strong> 🛡️</div>
+            <div><span>سطح قلمرو:</span> <strong id="realm-level">1</strong> 🌟</div>
         </div>
-        <div id="actions-container">
-            </div>
-        <button id="close-button">بستن مینی‌اپ</button>
+
+        <h2>منوی اصلی:</h2>
+        <div class="main-actions">
+            <button id="extract-gold-btn" class="action-button economic">💰 استخراج طلا</button>
+            <button id="battle-btn" class="action-button military">⚔️ نبرد</button>
+            
+            <button id="my-realm-btn" class="action-button military">🏰 قلمرو من</button>
+            <button id="market-btn" class="action-button economic">🛒 بازار</button>
+
+            <button id="sepah-btn" class="action-button guild">⚔️ سپاه</button>
+            <button id="leaderboard-btn" class="action-button social">🏆 رتبه‌بندی</button>
+
+            <button id="extract-resources-btn" class="action-button economic">⛏️ استخراج منابع</button>
+            <button id="daily-reward-btn" class="action-button economic">🎁 جایزه روزانه</button>
+
+            <button id="direct-attack-btn" class="action-button military">🎯 حمله مستقیم</button>
+            <button id="special-defense-btn" class="action-button military">🛡️ دفاع ویژه</button>
+
+            <button id="sepah-war-btn" class="action-button guild">⚔️ نبرد بین سپاهی ⚔️</button>
+            <button id="black-market-btn" class="action-button economic">📦 بازار سیاه</button>
+
+            <button id="game-group-btn" class="action-button social">💬 گروه بازی</button>
+            <button id="support-btn" class="action-button social">📞 پشتیبانی</button>
+
+            <button id="arsenal-btn" class="action-button military">⚔️ زرادخانه</button>
+            <button id="defense-equipment-btn" class="action-button military">🛡️ تجهیزات دفاعی</button>
+
+            <button id="battle-list-btn" class="action-button military">📜 لیست نبردها</button>
+            <button id="attack-bot-btn" class="action-button military">🤖 حمله به بات</button>
+            
+            <button id="invite-friends-btn" class="action-button social">➕ دعوت دوستان</button>
+            <button id="game-guide-btn" class="action-button utilities">❓ راهنمای بازی</button>
+
+            <button id="statement-btn" class="action-button social">✍️ بیانیه</button>
+
+            <button id="cyber-warfare-btn" class="action-button cyber">💻 جنگ سایبری</button>
+
+            <button id="transfer-resources-btn" class="action-button transfer">🎁 انتقال منابع</button>
+
+            <button id="telegram-transfer-btn" class="action-button telegram">✈️ انتقال به تلگرام ✈️</button>
+
+            <button id="admin-panel-btn" class="action-button admin hidden">⚙️ پنل ادمین ⚙️</button>
+        </div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
